--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ playground.xcworkspace
 # .swiftpm
 
 .build/
-
+runnerpia.xcconfig
 # CocoaPods
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
